Fix horizontal scroll and hide header on ipad & -

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -106,6 +106,7 @@ a:hover {
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.4);
 	color: #FFF;
 	min-height: 975px;
+	overflow: hidden;
 }
 
 	#header header {
@@ -458,4 +459,11 @@ a:hover {
 		#events .table {
 			margin: 60px 0 120px 0;
 		}
+}
+
+
+@media screen and (max-width: 768px) {
+	#header {
+		display: none;
+	}
 }
